--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tonejs/midi": "^2.0.28",
     "fft.js": "^4.0.4",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.0"
+    "react-icons": "^5.2.1",
+    "sass": "^1.54.0",
+    "tone": "^15.0.4"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
